
2016-09-03  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* tree.c (cb_concat_literals): allow concatenation of national and
	  boolean literals

2016-09-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.h: added CB_UNFINISHED as replacement for CB_PENDING for code that
	  compiles and "works somehow" (not necessarily according to specs)
	* cobc.c, cobc.h, warning.def: CB_ONWARNDEF for warnings that default to on
	* cobc.c. cobc.h, warning.def: new warning option "unfinished"
	  (defaults to on) - don't warn if unfinished features are used
	* tree.c, parser.y: marking "USAGE NATIONAL" and
	  "parameters passed by VALUE" as UNFINISHED instead of PENDING
	* parser.y: added more checks and pending messages to CURRENCY SIGN with
	  and without PICTURE SYMBOL

2016-09-02  Edward Hart <edward.dan.hart@gmail.com>

	* codegen.c (codegen, output_entry_function): modularised and shortened
	  code.

2016-09-01  Edward Hart <edward.dan.hart@gmail.com>

	* field.c (validate_field_1), parser.y (sign_clause): fixed bug #305 by
	  adding checks that elementary item with SIGN has S in PIC and is USAGE
	  DISPLAY or NATIONAL.
	* tree.h (cb_usage): deleted unused CB_USAGE_PROGRAM.
	* cobc.c: refactored (set_picture) and improved some function names.
	* field.c (validate_field_1): refactored SIGN and BLANK ZERO checks.
	* field.c: fixed bug #310 by adding cb_get_usage_string.

2016-08-31  Edward Hart <edward.dan.hart@gmail.com>

	* cobc.c (cobc_check_valid_name): refactored to take enum parameters
	  instead of magic numbers.
	* parser.y (print_bits): improved style.
	* tree.c (cb_build_picture): added warning message to PIC N.

2016-08-30  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* scanner.l: added premature implementation of national-literals, 
	  hexadecimal-national-literals, hexadecimal-boolean-literals
	* tree.c, tree.h: new function cb_build_national_literal
	* tree.c (cb_concat_literals): allow concatenation of national and