@@ -132,6 +132,10 @@ console-is-crt:			no
 # use in a prototype-format CALL/CANCEL statement.
 program-name-redefinition:	yes
 
+# If yes, fixed format is as in COBOL 2002: no program-name area and lines can
+# be longer than 80 characters, like free format.
+2002-fixed-format:		no
+
 # Dialect features
 # Value: 'ok', 'warning', 'archaic', 'obsolete', 'skip', 'ignore', 'error',
 #        'unconformable'
