@@ -1,4 +1,8 @@
 
+2016-09-03  Edward Hart <edward.dan.hart@gmail.com>
+
+	* general: added 2002-fixed-format configuration option.
+
 2016-08-30  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>
 
 	* general: added national-literals, hexadecimal-national-literals and
